<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundhome"
    tools:context=".HelpActivity">
    <include
        android:id="@+id/include"
        layout="@layout/activity_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_title"
        android:layout_below="@id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abel"
        android:text="@string/help_title"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_below="@id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/car_ui_icon_arrow_back"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="67dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/help_title">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/search_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/search_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bird_search_list"
                        android:padding="10dp"
                        android:fontFamily="@font/abel"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/search_heading"
                        android:fontFamily="@font/abel"
                        android:padding="10dp"
                        android:text="@string/help_search"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fbbf_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/fbbf_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_bird"
                        android:fontFamily="@font/abel"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fbbf_heading"
                        android:fontFamily="@font/abel"
                        android:padding="10dp"
                        android:text="@string/help_fbbf"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/spottings_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/spottings_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spottings_text"
                        android:padding="10dp"
                        android:fontFamily="@font/abel"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/spottings_heading"
                        android:fontFamily="@font/abel"
                        android:padding="10dp"
                        android:text="@string/help_spottings"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/add_spotting_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/add_spotting_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_add_spotting_title"
                        android:padding="10dp"
                        android:fontFamily="@font/abel"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/add_spotting_heading"
                        android:fontFamily="@font/abel"
                        android:padding="10dp"
                        android:text="@string/help_add_spotting"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/map_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/map_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/map_text"
                        android:fontFamily="@font/abel"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/map_heading"
                        android:padding="10dp"
                        android:fontFamily="@font/abel"
                        android:text="@string/help_map"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/info_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_info_heading"
                        android:padding="10dp"
                        android:fontFamily="@font/abel"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/info_heading"
                        android:fontFamily="@font/abel"
                        android:padding="10dp"
                        android:text="@string/help_info"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>