<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp"

    >

    <com.google.android.material.tabs.TabLayout
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:id="@+id/tabLayout"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgButtonMenu"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        tools:layout_editor_absoluteY="5dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_home_24"
            android:text="@string/home_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/search"
            android:text="@string/search_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/spottings"
            android:text="@string/spottings" />

    </com.google.android.material.tabs.TabLayout>
    <ImageButton
        android:layout_width="40dp"
        android:padding="0dp"
        android:background="#FFFFFFFF"
        android:layout_margin="0dp"
        android:layout_height="56dp"
        android:id="@+id/imgButtonMenu"
        android:onClick="showMenu"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>